--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,9 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background: #F4EEE0;
+  font-size: 16px;
+  overflow: hidden;
 }
 
 a {
@@ -14,3 +17,4 @@ a {
 * {
   box-sizing: border-box;
 }
+
