--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -2,6 +2,12 @@ $black: #000;
 $beige: #F4EEE0;
 
 
+.wrapper{
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+}
+
 .topIntro{
   position: absolute;
   top: 0;
@@ -57,18 +63,36 @@ $beige: #F4EEE0;
   right: 40px;
   transform: translate(2px, -2px);
 }
+.themeButtonShadow{
+  width: 24px;
+  height: 24px;
+  background: $beige;
+  border-radius: 50%;
+  position: absolute;
+  top: 40px;
+  right: 40px;
+  transform: translate(2px, -2px);
+}
+
+
 .row{
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding-top: 24px;
-  .name{
-    font-family: 'MAZIUSREVIEW20.09-Regular';
-    text-transform: uppercase;
-    font-size: 22rem;
-    color: $black;
-    letter-spacing: 0;
-    line-height: 23rem;
+  padding-top: 6rem;
+  .nameOuter{
+    height: 16rem;
+    overflow: hidden;
+    // background: blue;
+    .nameInner{
+      font-family: 'MAZIUSREVIEW20.09-Regular';
+      text-transform: uppercase;
+      font-size: 22rem;
+      color: $black;
+      letter-spacing: 0;
+      line-height: 16rem;
+      // background: red;
+    }
   }
   .description{
     font-family: 'Graphik-Regular';
@@ -83,16 +107,19 @@ $beige: #F4EEE0;
     }
   }
 }
-.surname{
-  font-family: 'MAZIUSREVIEW20.09-Extraitalic';
-  text-transform: uppercase;
-  font-size: 22rem;
-  color: $black;
-  letter-spacing: 0;
-  line-height: 23rem;
-  transform: translateY(-35px);
-  padding-bottom: 30px;
-  // background: pink;
+.surnameOuter{
+  height: 23rem;
+  transform: translateY(3rem);
+  padding-bottom: 3rem;
+  overflow: hidden;
+  .surnameInner{
+    font-family: 'MAZIUSREVIEW20.09-Extraitalic';
+    transform: translateY(-5rem);
+    text-transform: uppercase;
+    font-size: 22rem;
+    color: $black;
+    line-height: 28rem;
+  }
 }
 .scroll{
   position: absolute;
